cli/tests/snapshots/help__btrfs_device_ready.snap
---
source: cli/tests/help.rs
expression: text
---
Check whether all devices of a multi-device filesystem are present

Opens /dev/btrfs-control and queries the kernel for the given device. Exits with
code 0 if all member devices are present and the filesystem is ready to mount,
or a non-zero code if the device set is incomplete.

Usage: ready <DEVICE>

Arguments:
  <DEVICE>
          A block device belonging to the multi-device filesystem to check

Options:
  -h, --help
          Print help (see a summary with '-h')
