cli/tests/snapshots/help__btrfs_device_remove.snap
---
source: cli/tests/help.rs
expression: text
---
Remove one or more devices from a mounted filesystem

Each device can be specified as a block device path, a numeric device ID, the
special token "missing" (to remove a device that is no longer present), or
"cancel" (to cancel an in-progress removal).

The operation requires CAP_SYS_ADMIN.

Usage: remove [OPTIONS] <ARGS> <ARGS>...

Arguments:
  <ARGS> <ARGS>...
          

Options:
      --enqueue
          One or more devices to remove (path, devid, "missing", or "cancel"),
          followed by the filesystem mount point
          
          Example: btrfs device remove /dev/sdb 3 missing /mnt/data Wait if
          another exclusive operation is running, rather than failing

  -h, --help
          Print help (see a summary with '-h')
