cli/tests/snapshots/help__btrfs_filesystem_commit_stats.snap
---
source: cli/tests/help.rs
expression: text
---
Show commit statistics for a mounted filesystem

Usage: commit-stats [OPTIONS] <PATH>

Arguments:
  <PATH>
          

Options:
  -z, --reset
          Print stats then reset the max_commit_ms counter (requires root)

  -h, --help
          Print help
