cli/tests/snapshots/help__btrfs_filesystem_df.snap
---
source: cli/tests/help.rs
expression: text
---
Show space usage information for a mounted filesystem

Usage: df [OPTIONS] <PATH>

Arguments:
  <PATH>
          

Options:
      --raw
          Show raw numbers in bytes

      --human-readable
          Show human-friendly numbers using base 1024 (default)

      --iec
          Use 1024 as a base (KiB, MiB, GiB, TiB)

      --si
          Use 1000 as a base (kB, MB, GB, TB)

      --kbytes
          Show sizes in KiB, or kB with --si

      --mbytes
          Show sizes in MiB, or MB with --si

      --gbytes
          Show sizes in GiB, or GB with --si

      --tbytes
          Show sizes in TiB, or TB with --si

  -h, --help
          Print help
